[gd_scene load_steps=3 format=3 uid="uid://oy6f5d0mgvmi"]

[ext_resource type="Script" path="res://Transitionscreens/settings_screen.gd" id="1_2hxnj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xlnlo"]

[node name="Settings_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2hxnj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 647.0

[node name="Header" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.407
anchor_right = 0.5
anchor_bottom = 0.407
offset_left = -197.5
offset_top = -25.329
offset_right = 118.5
offset_bottom = -2.32901
scale = Vector2(1.25024, 2.23254)
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music_vol_slider" type="HSlider" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -6.5
offset_right = 215.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2

[node name="Music_percent" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.464
anchor_right = 0.499
anchor_bottom = 0.464
offset_left = -195.347
offset_top = -11.208
offset_right = 195.653
offset_bottom = 11.792
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back_button" type="TextureButton" parent="."]
material = SubResource("CanvasItemMaterial_xlnlo")
layout_mode = 0
offset_left = 372.0
offset_top = 516.0
offset_right = 797.0
offset_bottom = 556.0

[node name="Label" type="Label" parent="Back_button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.826
anchor_right = 0.5
anchor_bottom = 0.826
offset_left = 1301.5
offset_top = 1221.87
offset_right = 1362.5
offset_bottom = 1247.87
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music_Player" type="AudioStreamPlayer2D" parent="."]
autoplay = true
bus = &"Music"

[connection signal="value_changed" from="Panel/Music_vol_slider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Back_button" to="." method="_on_back_button_pressed"]
